Details
-
Bug
-
Resolution: Fixed
-
Major
-
June 2017
-
74,881
Description
With the latest Wine Sync R74881 introduced a new test for GetCharacterPlacementA having a NULL entry for the *lpResults parameter. This causes ReactOS to crash when running the "gdi32:font" test on the test bots. The attached patch adds a test for this value being NULL and exits gracefully now so that this test no longer crashes.
Attachments
Issue Links
- relates to
-
CORE-13362 Syncing ReactOS with Wine Staging 2.9
- Untriaged