[GDI32] - Check for lpResults == NULL in GetCharacterPlacementA. Patch by Doug Lyons. Fixes crash in gdi32_winetest:font CORE-13401 #resolve

svn path=/trunk/; revision=74973